@@ -136,6 +136,13 @@ cache. \\
 \ref{stopwatch} for details. \\
 
 \hline
+
+\texttt{enable\_splice} & Set to \texttt{no} to disable the
+\texttt{splice()} system call (enabled by default).  This may degrade
+the server performance, and is only intended to work around kernel
+bugs. \\
+
+\hline
 \end{longtable}
 
 \label{memcached}
