@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.7.19) unstable; urgency=low
   * fork: refill the input buffer as soon as possible
   * delegate-client: implement an abortable event
   * pool: added assertions for libevent leaks
+  * direct: added option "-s enable_splice=no"
 
  --
 
